<resources>
    <string name="app_name">Jack of All Trades</string>
    <string name="divide_button">÷</string>
    <string name="multiply_button">×</string>
    <string name="subs_button">-</string>
    <string name="plus_button">+</string>
    <string name="comma_button">,</string>
    <string name="zero_button">0</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="equal_button">=</string>
    <string name="ac_button">AC</string>
    <string name="negative_button">( - )</string>
    <string name="parenthesis_button">( )</string>
    <string name="ans_button">Ans</string>
    <string name="calculator_activity_label">Calculator</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="toast_notifications">Toast</string>
    <string name="status_notifications">Status</string>

    <string name="action_settings">Settings</string>

    <string name="toolbar">Toolbar</string>
    <string name="toolbar_help">Different icons will show up here. Essentially, you can set up your notification
    preferences (just for the Calculator), and Logout. There are some other features but they are specific for each part,
    but they are explained below.</string>

    <string name="memory">Memory</string>
    <string name="memory_help">The classical game of making pairs, you know what to do. Select 4x4
        if you are a noob or 6x6 if you wanna brag in front of the ladies (seriously tho? Good luck with that)\n\nIf
        you are failing too hard you can press the restart button and start all over for free, no penalty. We
        won\'t even make you watch any ads. Awesome right? That\'s if you want to play more than once of course,
        let\'s not pretend it\'s not boring as hell.</string>

    <string name="ranking">Ranking</string>
    <string name="ranking_help">Here is where you come when you want to boost your ego by comparing your
        Memory\'s best score against the scores of the other people. Quite sad, really. Oh, and did I mention these
        other people are default database registers? Because this thing has no online features, so unless you and your
        friends take turns to play on the same phone (come on...), good luck beating the 6x6 mode in less than 12 moves.
        Yeah, we cheat.\n\nYou can Restart the ranking and then play a game and you\'ll be on top.
        Yeah, good job buddy, you made it. Geez.</string>

    <string name="music_player">Music Player</string>
    <string name="music_player_help">This is probably the most interesting part of the app. It\'s an okay music player.
    It doesn\'t have a list of songs, but aside from that it does everything every other music player out there does. That\'s
        if your phone has an SD card of course. Oh and there\'s a bug, but it\'s kinda tricky to reproduce so maybe you won\'t find
        it and my mark will go up.
    </string>

    <string name="calculator">Calculator</string>
    <string name="calculator_help">This calculator parses complex mathematical expressions and takes into account
    operand priorities, parenthesis and previous answers to deliver precise results. Which is the same as saying that
    this calculator calculates, but hey, I had to fill this part with something. Parenthesis are self-controlled, so you
    can\'t mess that up. Also, you\'ll notice two extra icons on the toolbar. The left one opens Wolfram Alpha in your browser,
    which is an infinitely better calculator. We encourage you to use that one instead. The right icon calls to whichever number you input.
    Which is useful because reasons. Also, it works. </string>

    <string name="profile">Profile</string>
    <string name="profile_help">Here you can click on the profile image to select your own from your phone pictures, or you can
        take a picture with your camera. Then, stare at it all day, because that\'s pretty much all that\'s left to do. You can also
        check your best scores at Memory. Finally, your profile will also display your last (or current) location, which is useful if
        you hit your head and have no clue where you are at. Although you probably won\'t remember your unlock pattern anyways.
        Also, you can log out, in case you wanna go do something productive.
    </string>



</resources>
